# opengl-flight-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: math.hpp  pch.hpp
include/joystick/: joystick.hpp
resources/: cube-1x1x1-meter-reference.blend
resources/shaders/: std-mat.fs  std-mat.vs
resources/trainer/: README.md  outside.blend  outside.mtl
src/: main.cpp  mesh.hpp
src/joystick/: joystick.hpp
src/joystick/linux/: joystick.hpp
src/joystick/windows/: joystick.hpp
src/util/: math.hpp  pch.hpp  util.hpp
